--- a/.tmp/public/styles/importer.css
+++ b/.tmp/public/styles/importer.css
@@ -1,5 +1,2 @@
-body {
-  font: 100% Helvetica, sans-serif;
-  color: #333333; }
-
+body{font:100% Helvetica, sans-serif;color:#333}.test{border-radius:5px;transition:all 0.3s;transform:translateX(1em)}
 /*# sourceMappingURL=importer.css.map */
