--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,4 +1,10 @@
 body {
   font: 100% Helvetica, sans-serif;
-  color: #333333;
+  color: #333;
+}
+
+.test {
+  border-radius: 5px;
+  transition: all 0.3s;
+  transform: translateX(1em);
 }
