--- a/assets/styles/_markus.scss
+++ b/assets/styles/_markus.scss
@@ -25,46 +25,6 @@ pre,
 }
 
 
-/** Custom scrollbars in WebKit-based browsers */
-
-::-webkit-scrollbar {
-  height: 8px;
-  width: 8px;
-}
-
-::-webkit-scrollbar-button {
-  &:start:decrement,
-  &:end:increment {
-    background-color: $white;
-    display: block;
-    height: 0;
-    width: 0;
-  }
-}
-
-::-webkit-scrollbar-track-piece {
-  border-radius: 8px;
-  background-color: $white;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: $grey;
-  border-radius: 8px;
-
-  &:hover {
-    background-color: $blue;
-  }
-
-  &:vertical {
-    height: 50px;
-  }
-
-  &:horizontal {
-    width: 50px;
-  }
-}
-
-
 /** Headings */
 
 h1 {
@@ -98,9 +58,9 @@ p + p {
 /** Links */
 
 a {
-  @include transition(all, $time-quick);
   color: $dark-blue;
   text-decoration: none;
+  transition: all $time-quick;
 
   &:hover {
     color: $blue;
@@ -111,7 +71,7 @@ a {
 /** Alert messages */
 
 .alert {
-  @include border-radius($radius);
+  border-radius: $radius;
   display: block;
   padding: 0.25em;
   width: 100%;
@@ -140,14 +100,14 @@ a {
 
 input,
 textarea {
-  @include border-radius($radius);
-  @include transition(all, $time-quick);
   background: $light-grey;
+  border-radius: $radius;
   border: 1px solid $grey;
   color: $dark-grey;
   font: 400 1em $fonts;
   outline: none;
   padding: 0.5em 0.75em;
+  transition: all $time-quick;
   width: 100%;
 
   &:hover {
@@ -181,8 +141,8 @@ textarea {
 }
 
 select {
-  @include border-radius($radius);
   background: none;
+  border-radius: $radius;
   border: 1px solid $light-blue;
   margin: 5px;
   padding-left: 5px;
@@ -195,10 +155,10 @@ input[type='button'],
 input[type='submit'],
 input[type='reset'],
 button {
-  @include background-gradient($white, $light-grey);
-  @include border-radius($radius);
-  @include box-shadow(inset 0 -1px 0 $grey);
-  @include transition(all, $time-quick);
+  background: linear-gradient($white, $light-grey);
+  border-radius: $radius;
+  box-shadow: inset 0 -1px 0 $grey;
+  transition: all $time-quick;
   border: 1px solid $blue;
   color: $dark-grey;
   font: 400 1em $fonts;
@@ -208,25 +168,25 @@ button {
   text-shadow: 0 1px 0 $white;
 
   &:hover {
-    @include box-shadow(inset 0 -1px 0 $grey, 0 1px 0 $light-grey);
     border-color: $dark-blue;
+    box-shadow: inset 0 -1px 0 $grey, 0 1px 0 $light-grey;
     color: $dark-blue;
     top: 1px;
   }
 
   &:focus {
-    @include box-shadow(inset 0 -1px 0 $grey, 0 0 3px $blue);
+    box-shadow: inset 0 -1px 0 $grey, 0 0 3px $blue;
   }
 
   &:active {
-    @include background-gradient($light-grey, $white);
-    @include box-shadow(none);
+    background: linear-gradient($light-grey, $white);
+    box-shadow: none;
     color: $dark-blue;
   }
 
   &[disabled] {
-    @include background-gradient($light-grey, $disabled-grey);
-    @include box-shadow(none);
+    background: linear-gradient($light-grey, $disabled-grey);
+    box-shadow: none;
     border-color: $disabled-dark;
     color: $disabled-dark;
   }
@@ -243,361 +203,75 @@ button {
 }
 
 
-/** Fieldset */
-
-fieldset {
-  @include border-radius($radius);
-  @include box-shadow(0 3px 0 $grey);
-  background: $white;
-  border: none;
-  padding: 2.5em 1.5em 1.5em;
-  position: relative;
-
-  legend {
-    border: none;
-    width: 100%;
-
-    span {
-      @extend h3;
-      display: block;
-      padding-top: 0.5em;
-      position: relative;
-      top: 1.5em;
-    }
-  }
-
-  // Fieldsets within fieldsets
-  fieldset {
-    @include border-radius(0);
-    @include box-shadow(none);
-    border-top: 1px solid $grey;
-    padding: 3.5em 0 0;
-
-    legend span {
-      border-top: 1px solid $grey;
-    }
-  }
-}
-
-
-/** Checkboxes and radio buttons */
-
-input[type='checkbox'],
-input[type='radio'] {
-  display: none;
-  min-width: 30px;
-
-  & + label {
-    cursor: pointer;
-  }
-
-  & + label span {
-    cursor: pointer;
-    display: inline-block;
-    height: 22px;
-    margin: -4px 4px 0 0;
-    vertical-align: middle;
-    width: 22px;
-  }
-}
-
-input[type='checkbox'],
-input[type='radio'] {
-  & + label span {
-    @include box-shadow(inset 0 0 5px $light-grey);
-    @include transition(all, $time-quick);
-    background-color: $white;
-    border: 1px solid $blue;
-  }
-
-  & + label:hover span {
-    border-color: $dark-blue;
-  }
-
-  &:checked + label span::after {
-    color: $blue;
-    display: block;
-    font-size: 1.2em;
-    margin-left: -1px;
-    line-height: 15px;
-    text-align: center;
-    text-shadow: 0 1px 0 $dark-blue;
-    width: 22px;
-  }
-
-  &[disabled] + label span {
-    @include box-shadow(none);
-    background-color: $disabled-grey;
-    border-color: $disabled-dark;
-  }
-
-  &[disabled]:checked + label span {
-    @include box-shadow(none);
-    background-color: $disabled-grey;
-    border-color: $disabled-dark;
-
-    &::after {
-      color: $disabled-dark;
-      text-shadow: 0 1px 0 $grey;
-    }
-  }
-}
-
-input[type='checkbox'] {
-  & + label span {
-    @include border-radius($radius);
-  }
-
-  &:checked + label span::after {
-    content: "✓";
-  }
-}
-
-input[type='radio'] {
-  & + label span {
-    @include border-radius(100%);
-  }
-
-  &:checked + label span::after {
-    content: "●";
-  }
-}
-
-
 /** Tables */
 
-.table {
-  border-left: 1px solid $grey;
-  border-right: 1px solid $grey;
-  overflow-x: auto;
+table {
+  border: 1px solid $grey;
+  border-bottom: none;
   width: 100%;
 
-  table {
-    border-top: 1px solid $grey;
-    width: 100%;
-
-    thead {
-      background-color: $light-grey;
-      border-bottom: 2px solid $grey;
-      font-weight: 600;
-      text-align: left;
-      text-transform: uppercase;
-
-      .asc,
-      .des {
-        cursor: pointer;
-
-        &::after {
-          background-position: center center;
-          background-repeat: no-repeat;
-          background-size: 0.85em 0.85em;
-          content: "";
-          display: inline-block;
-          height: 0.85em;
-          margin-left: 0.25em;
-          vertical-align: middle;
-          width: 0.85em;
-        }
-      }
-
-      .asc::after {
-        background-image: url(../images/asc@2x.png);
-      }
-
-      .des::after {
-        background-image: url(../images/des@2x.png);
-      }
-    }
-
-    tr {
-      border-bottom: 1px solid $grey;
-
-      th,
-      td {
-        border-right: 1px solid $grey;
-        padding: 0.5em 1em;
-        vertical-align: middle;
-
-        &:last-child {
-          border-right: none;
-        }
-      }
-    }
-
-    tbody {
-      tr {
-        @include transition(all, $time-quick);
-
-        &:nth-child(odd) {
-          background-color: $white;
-        }
-
-        &:nth-child(even) {
-          background-color: $light-grey;
-        }
-
-        &:hover {
-          background: $lighter-blue;
-        }
-      }
-    }
-  }
-}
-
-
-/** Sortable lists */
-
-.sortable {
-  @include border-radius($radius);
-  background: $white;
-  border: 1px solid $grey;
-
-  header {
-    @include border-radius-top($radius);
+  thead {
+    background-color: $light-grey;
+    border-bottom: 2px solid $grey;
     font-weight: 600;
     text-align: left;
     text-transform: uppercase;
-    padding: 0.5em;
 
-  }
+    .asc,
+    .des {
+      cursor: pointer;
 
-  .right {
-    float: right;
-  }
-
-  ul {
-    margin: 0;
-    padding: 0;
-
-    li {
-      @include transition(all, $time-quick);
-      background: url(../images/handle@2x.png) 0.5em center no-repeat;
-      background-size: 12px 20px;
-      border-top: 1px solid $grey;
-      list-style: none;
-      min-height: 2.5em;
-      padding: 0.5em 0.5em 0.5em 2em;
-
-      &:hover {
-        background-color: $lighter-blue;
+      &::after {
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: 0.85em 0.85em;
+        content: "";
+        display: inline-block;
+        height: 0.85em;
+        margin-left: 0.25em;
+        vertical-align: middle;
+        width: 0.85em;
       }
+    }
+
+    .asc::after {
+      background-image: url(../images/asc@2x.png);
+    }
+
+    .des::after {
+      background-image: url(../images/des@2x.png);
+    }
+  }
+
+  tr {
+    border-bottom: 1px solid $grey;
+
+    th,
+    td {
+      border-right: 1px solid $grey;
+      padding: 0.5em 1em;
+      vertical-align: middle;
 
       &:last-child {
-        @include border-radius-bottom($radius);
-      }
-    }
-  }
-}
-
-
-/** Tab pane */
-
-.tab-pane {
-  @include border-radius($radius);
-  background: $light-grey;
-  border: 1px solid $blue;
-  padding: 0.5em;
-
-  ul {
-    margin: 0;
-    padding: 0;
-
-    li {
-      @include border-radius-top($radius);
-      background: $light-blue;
-      display: inline-block;
-      list-style: none;
-
-      a {
-        @include border-radius-top($radius);
-        display: inline-block;
-        outline: none;
-        padding: 0.15em 1.5em;
-      }
-
-      &.ui-tabs-active {
-        background: $white;
-
-        a {
-          color: $dark-grey;
-        }
+        border-right: none;
       }
     }
   }
 
-  .ui-tabs-panel {
-    @include border-radius-bottom($radius);
-    background: $white;
-    padding: 0.5em;
-  }
-}
+  tbody {
+    tr {
+      transition: all $time-quick;
 
-
-/** Tags */
-
-ul.tags {
-  display: block;
-  height: 2em;
-  margin: 0;
-  padding: 0;
-
-  & > li {
-    @include border-radius($radius);
-    @include transition(all, $time-quick);
-    background: $grey;
-    border: 1px solid $grey;
-    color: $white;
-    cursor: pointer;
-    display: block;
-    font-size: 0.9em;
-    float: left;
-    list-style: none;
-    margin-right: 0.5em;
-    padding: 0 0.6em;
-    position: relative;
-    text-transform: uppercase;
-
-    &:hover {
-      @include border-radius-bottom(0);
-      background: $white;
-      border: 1px solid $blue;
-      color: $dark-blue;
-
-      ul {
-        display: block;
+      &:nth-child(odd) {
+        background-color: $white;
       }
-    }
 
-    ul {
-      @include border-radius-bottom($radius);
-      background: $white;
-      border: 1px solid $blue;
-      display: none;
-      padding: 0;
-      position: absolute;
-      top: 0.65em;
-      left: -1px;
-      width: 200px;
-      z-index: 9000;
+      &:nth-child(even) {
+        background-color: $light-grey;
+      }
 
-      li {
-        color: $dark-grey;
-        list-style: none;
-        text-transform: none;
-
-        a {
-          color: $dark-grey;
-          display: block;
-          padding: 0.4em 0.5em;
-
-          &:hover {
-            color: $white;
-          }
-        }
-
-        &:hover {
-          background: $blue;
-        }
+      &:hover {
+        background: $lighter-blue;
       }
     }
   }
@@ -607,12 +281,12 @@ ul.tags {
 /** Dialog modal windows */
 
 .dialog {
-  @include border-radius($radius);
-  @include box-shadow(0 0 10px $grey);
   background: $white;
+  border-radius: $radius;
+  box-shadow: 0 0 10px $grey;
   max-width: 100%;
   padding: 2.5em 1.5em;
-  z-index: 10000;
+  z-index: 100000;
 
   .dialog-actions {
     text-align: center;
@@ -620,84 +294,6 @@ ul.tags {
 
     button {
       margin: 0.5em;
-    }
-  }
-}
-
-
-/** Dropdown menu */
-
-.dropdown {
-  @include border-radius($radius);
-  background: $white;
-  border: 1px solid $dark-blue;
-  cursor: pointer;
-  display: inline-block;
-  padding: 0.25em;
-  position: relative;
-  text-align: center;
-  width: 250px;
-
-  &:hover {
-    @include border-radius-bottom(0);
-
-    ul {
-      display: block;
-    }
-  }
-
-  ul {
-    @include border-radius-bottom($radius);
-    background: $white;
-    border: 1px solid $dark-blue;
-    display: none;
-    left: -1px;
-    margin: 0;
-    padding: 0;
-    top: 2em;
-    position: absolute;
-    text-align: left;
-    width: 250px;
-
-    li {
-      list-style: none;
-
-      &:last-child {
-        @include border-radius-bottom($radius);
-      }
-    }
-
-    li.section {
-      padding: 0.25em;
-    }
-
-    li:not(.section) {
-      @include transition(all, $time-quick);
-
-      &:hover,
-      &.active {
-        background: $blue;
-        color: $white;
-      }
-
-      &.active {
-        padding: 0.5em 1em;
-      }
-
-      a {
-        display: block;
-        padding: 0.5em 1em;
-
-        &:hover {
-          color: $white;
-        }
-      }
-    }
-
-    .section {
-      font-size: 0.9em;
-      font-weight: 600;
-      text-transform: uppercase;
     }
   }
 }
@@ -711,12 +307,10 @@ nav {
     padding: 0;
 
     li {
-      @include border-radius-top($radius);
       display: inline-block;
       text-align: center;
 
       a {
-        @include border-radius-top($radius);
         display: block;
         height: 3em;
         line-height: 3em;
