--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,10 +7,16 @@
     <title>Itty Bitty</title>
 
     <link rel="stylesheet" href="/styles/importer.css">
+
+    <script src="/js/jquery-2.1.1.min.js"></script>
+    <!-- <script src="/js/jquery-ui.js"></script> -->
+    <script src="/js/jquery.easyModal.js"></script>
   </head>
 
   <body>
+    <%- partial ('partials/header.ejs') %>
     <%- body %>
+    <%- partial ('partials/footer.ejs') %>
 
     <script src="/js/dependencies/sails.io.js"></script>
   </body>
