--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,20 +1,5 @@
-<aside class='dialog'>
-  <h2>Dialog title</h2>
-  <p>Some content</p>
-
-  <section class='dialog-actions'>
-    <button class="close">Centred buttons</button>
-  </section>
-</aside>
-
-<a id="open-link-selector">Open</a>
-
-<script>
-  $('.dialog').easyModal();
-  $('#open-link-selector').click(function() {
-    $('.dialog').trigger('openModal');
-  });
-</script>
+<a href="/register">Register</a>
+<a href="/login">Login</a>
 
 <table>
   <thead>
