--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,12 @@
-<nav>
-  <ul class='main'>
-    <li><a href='#' class='active'>Home</a></li>
-    <li><a href='#'>Assignments</a></li>
-    <li><a href='#'>Assignments</a></li>
-  </ul>
-</nav>
+<header>
+  <div class='container'>
+
+    <nav>
+      <ul class='main'>
+        <li><a href='#' class='active'>Home</a></li>
+        <li><a href='#'>Assignments</a></li>
+        <li><a href='#'>Assignments</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
