--- a/assets/styles/_core.scss
+++ b/assets/styles/_core.scss
@@ -6,7 +6,7 @@
 /** Main */
 
 body {
-  background: $light-grey;
+  background: $dark-grey;
   font: 400 16px/24px $fonts;
   color: $dark-grey;
 }
@@ -30,7 +30,7 @@ pre,
 /** Headings */
 
 h1 {
-  font: 300 2.5em $fonts;
+  font: 300 2.25em $fonts;
   margin: 0;
 }
 
@@ -99,6 +99,11 @@ a {
 
 
 /** Text field inputs */
+
+label {
+  display: block;
+  margin: 1em 0 0.25em;
+}
 
 input,
 textarea {
@@ -316,22 +321,7 @@ nav {
         display: block;
         height: 3em;
         line-height: 3em;
-        min-width: 10em;
         padding: 0 1em;
-      }
-    }
-  }
-
-  ul.main {
-    border-bottom: 2px solid $blue;
-
-    li:hover,
-    .active {
-      background-color: $blue;
-      color: $white;
-
-      a {
-        color: $white;
       }
     }
   }
