--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,22 +1,83 @@
+// Centered contents
+// ========================================================
+
 .container {
   margin: 0 auto;
-  padding: 0 1em;
   width: 80%;
 }
 
+
+// Header
+// ========================================================
+
 header {
   background: $blue;
+
+  .container {
+    display: table;
+
+    @include breakpoint(small) {
+      display: block;
+    }
+  }
+
+  a {
+    color: $white;
+    padding: 0 1em;
+
+    &:hover {
+      color: $white;
+      box-shadow: inset 0 -3px 0 0 $white;
+    }
+  }
 }
+
+  #logo,
+  #nav {
+    display: table-cell;
+
+    @include breakpoint(small) {
+      display: block;
+    }
+  }
+
+  #logo {
+    height: 3em;
+    line-height: 3em;
+    width: 8em;
+  }
+
+  #nav {
+    text-align: right;
+
+    @include breakpoint(small) {
+      text-align: left;
+    }
+  }
+
+
+// Main content block
+// ========================================================
 
 main {
-  margin: 2em 0;
+  background: $light-grey;
+  padding: 2em 1em;
 }
 
+
+// Footer
+// ========================================================
+
 footer {
-  background: $grey;
+  background: $dark-grey;
   color: $white;
-  padding: 2em 0;
+  font-size: 0.9em;
+  padding: 2em 1em;
 }
+
+
+// User login/registration
+// ========================================================
 
 .user-form {
   background: $white;
@@ -27,6 +88,18 @@ footer {
   padding: 2em 1em;
 
   input[type='submit'] {
-    margin-top: 1em;
+    margin-top: 1.5em;
   }
 }
+
+
+// Profile
+// ========================================================
+
+
+// Topic/level selection menus
+// ========================================================
+
+
+// Level
+// ========================================================
