--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,12 +2,12 @@
   <h1>Login</h1>
 
   <form action='login'>
-    <label>First name:</label>
-    <input type="text" name="firstname" value="Mickey">
+    <label>Email:</label>
+    <input type="email" name="email" required>
 
-    <label>Last name:</label>
-    <input type="text" name="lastname" value="Mouse">
+    <label>Password:</label>
+    <input type="password" name="password" required>
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Login">
   </form>
 </div>
