--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,12 +2,15 @@
   <h1>Register</h1>
 
   <form action='register'>
-    <label>First name:</label>
-    <input type="text" name="firstname" value="Mickey">
+    <label>Email:</label>
+    <input type="email" name="email" required>
 
-    <label>Last name:</label>
-    <input type="text" name="lastname" value="Mouse">
+    <label>Password:</label>
+    <input type="password" name="password" required>
 
-    <input type="submit" value="Submit">
+    <label>Confirm password:</label>
+    <input type="password" name="password2" required>
+
+    <input type="submit" value="Register">
   </form>
 </div>
