--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <div class='user-form'>
   <h1>Login</h1>
 
-  <form action='login'>
+  <form action='login' method='post'>
     <label>Email:</label>
     <input type="email" name="email" required>
 
