--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <div class='user-form'>
   <h1>Register</h1>
 
-  <form action='register'>
+  <form action='register' method='post'>
     <label>Email:</label>
     <input type="email" name="email" required>
 
