Landing page progress

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -93,6 +93,16 @@ footer {
 }
 
 
+// Homepage
+// ========================================================
+
+#home-hero {
+  background: url('../images/hero.jpg') no-repeat center center / cover;
+  color: $white;
+  height: 100%;
+}
+
+
 // Profile
 // ========================================================
 
