--- a/views/homelayout.ejs
+++ b/views/homelayout.ejs
@@ -12,15 +12,7 @@
   </head>
 
   <body>
-    <div id='home-hero'>
-      <div class='container'>
-        <h1>There are 10 of people in the world...</h1>
-        <h3>You know where this is going.</h3>
-
-        <p>Learn how to manipulate bits and convert between numerical bases.</p>
-      </div>
-    </div>
-
+    <%- body %>
 
     <%- partial ('partials/footer.ejs') %>
 
