--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <footer>
+  <div id='footer-gradient'></div>
   <div class='container'>
-    &copy; 2015 Itty Bitty
+    <div id='footer-logo'>Itty Bitty</div>
   </div>
 </footer>
