--- a/assets/styles/_constants.scss
+++ b/assets/styles/_constants.scss
@@ -1,21 +1,27 @@
         $fonts: 'Open Sans', 'Lucida Grande', Verdana, Arial, sans-serif;
    $mono-fonts: 'Consolas', 'Courier New', Courier, mono, serif;
+
        $radius: 5px;
+
    $time-quick: 0.25s;
-  $time-medium: 0.35s;
- $lighter-blue: #e8f4f2;
+       $orange: #f38070;
+         $pink: #eb55ad;
+
    $light-blue: #cee3ea;
-         $blue: #89b1dd;
-    $dark-blue: #3a6ab3;
+         $blue: #486b6e;
+    $dark-blue: #254143;
+
         $white: #fff;
    $light-grey: #eee;
          $grey: #8d8d8d;
-    $dark-grey: #464646;
+    $dark-grey: #2b2b2b;
+
+$disabled-grey: #cecece;
+$disabled-dark: #afafaf;
+
     $light-red: #ffb4b4;
           $red: #fe2a2a;
  $light-yellow: #fafdaa;
        $yellow: #dde426;
   $light-green: #81d881;
         $green: #23c023;
-$disabled-grey: #cecece;
-$disabled-dark: #afafaf;
