--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,6 +1,15 @@
-// Centered contents
+// Main
 // ========================================================
 
+body {
+  background: #eee url('../images/grey.png');
+
+  @include hidpi {
+    background-image: url('../images/grey@2x.png');
+  }
+}
+
+// Centred contents
 .container {
   margin: 0 auto;
   width: 80%;
@@ -27,7 +36,6 @@ header {
 
     &:hover {
       color: $white;
-      box-shadow: inset 0 -3px 0 0 $white;
     }
   }
 }
@@ -35,6 +43,7 @@ header {
   #logo,
   #nav {
     display: table-cell;
+    vertical-align: middle;
 
     @include breakpoint(small) {
       display: block;
@@ -42,9 +51,19 @@ header {
   }
 
   #logo {
-    height: 3em;
-    line-height: 3em;
-    width: 8em;
+    background: url('../images/logo.png') no-repeat center center;
+    background-size: 246px 29px;
+    height: 40px;
+    width: 246px;
+    text-indent: -3000em;
+
+    @include breakpoint(small) {
+      margin-bottom: 1em;
+    }
+
+    @include hidpi {
+      background-image: url('../images/logo@2x.png');
+    }
   }
 
   #nav {
@@ -72,7 +91,28 @@ footer {
   background: $dark-grey;
   color: $white;
   font-size: 0.9em;
-  padding: 2em 1em;
+
+  .container {
+    padding: 4em 1em;
+  }
+}
+
+#footer-gradient {
+  background: linear-gradient(90deg, $orange, $pink);
+  height: 5px;
+  width: 100%;
+}
+
+#footer-logo {
+  background: url('../images/logo_light.png') no-repeat;
+  background-size: 245px 28px;
+  height: 28px;
+  width: 245px;
+  text-indent: -3000em;
+
+  @include hidpi {
+    background-image: url('../images/logo_light@2x.png');
+  }
 }
 
 
@@ -96,10 +136,77 @@ footer {
 // Homepage
 // ========================================================
 
+#home-header {
+  background: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+  padding: 1.5em 1em;
+}
+
+  #login,
+  #register {
+    color: $white;
+    padding: 0.5em 1.5em;
+  }
+
+  #register {
+    border: 1px solid $white;
+    border-radius: 20px;
+    margin-left: 1em;
+
+    &:hover {
+      background-color: $white;
+      color: $dark-blue;
+    }
+  }
+
 #home-hero {
-  background: url('../images/hero.jpg') no-repeat center center / cover;
+  background: url('../images/hero.jpg') fixed no-repeat center center / cover;
   color: $white;
   height: 100%;
+}
+
+  #home-hero-overlay {
+    background: linear-gradient(45deg, rgba($blue, .8), rgba($dark-blue, .8));
+    box-sizing: border-box;
+    content: ' ';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    .container {
+      position: relative;
+      display: table;
+      height: 100%;
+      padding: 1em;
+    }
+  }
+
+  #home-hero-intro {
+    display: table-cell;
+    height: 100%;
+    vertical-align: middle;
+  }
+
+  #home-hero-intro-text {
+    background: linear-gradient($pink, $orange);
+    background-size: cover;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: $pink;
+
+    h3 {
+      margin-top: 0.75em;
+    }
+  }
+
+#home-about {
+  padding: 4em 1em;
 }
 
 
