--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,1 +1,31 @@
-Hi there
+<header id='home-header'>
+  <div class='container'>
+    <a href='/' id='logo'>Itty Bitty</a>
+
+    <div id='nav'>
+      <a href='/login' id='login'>Login</a>
+      <a href='/register' id='register'>Register</a>
+    </div>
+  </div>
+</header>
+
+<section id='home-hero'>
+  <div id='home-hero-overlay'>
+    <div class='container'>
+      <div id='home-hero-intro'>
+        <div id='home-hero-intro-text'>
+          <h1>There are 10 types of people in the world...</h1>
+          <h3>You know where this is going.</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id='home-about'>
+  <div class='container'>
+    <h1>Learn</h1>
+
+    <p>Learn how to manipulate bits and convert between numerical bases.</p>
+  </div>
+</section>
