More arrow, smooth scrolling

--- a/assets/styles/_constants.scss
+++ b/assets/styles/_constants.scss
@@ -8,8 +8,8 @@
          $pink: #eb55ad;
 
    $light-blue: #cee3ea;
-         $blue: #486b6e;
-    $dark-blue: #254143;
+         $blue: #486b8f;
+    $dark-blue: #254473;
 
         $white: #fff;
    $light-grey: #eee;
