--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -80,7 +80,6 @@ header {
 // ========================================================
 
 main {
-  background: $light-grey;
   padding: 2em 1em;
 }
 
@@ -123,7 +122,7 @@ footer {
 .user-form {
   background: $white;
   border-radius: $radius;
-  box-shadow: 0 3px 5px $grey;
+  box-shadow: 0 4px 10px lighten($blue, 25%);
   margin: 0 auto;
   max-width: 25em;
   padding: 2em 1em;
@@ -144,13 +143,13 @@ footer {
   left: 0;
   width: 100%;
   z-index: 10000;
-  padding: 0 1em;
-  transition: background-color $time-quick;
+  transition: background-color $time-quick, box-shadow $time-quick;
   will-change: background-color;
 }
 
   .home-header-scrolled {
     background-color: $blue !important;
+    box-shadow: 0 1px 5px $dark-blue;
   }
 
   #login,
@@ -209,6 +208,40 @@ footer {
 
     h3 {
       margin-top: 0.75em;
+    }
+  }
+
+  #home-more {
+    border-radius: 50%;
+    border: 1px solid $white;
+    bottom: 1em;
+    color: $white;
+    display: block;
+    height: 2em;
+    left: 50%;
+    margin-left: -1em;
+    opacity: 0.7;
+    position: absolute;
+    text-indent: -3000em;
+    width: 2em;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &::after {
+      color: $white;
+      content: "v";
+      display: block;
+      font-weight: 300;
+      height: 2em;
+      left: -1px;
+      line-height: 2em;
+      position: absolute;
+      text-align: center;
+      text-indent: 0;
+      top: -1px;
+      width: 2em;
     }
   }
 
