--- a/views/homelayout.ejs
+++ b/views/homelayout.ejs
@@ -17,5 +17,19 @@
     <%- partial ('partials/footer.ejs') %>
 
     <script src="/js/dependencies/sails.io.js"></script>
+    <script>
+      $('a[href*=#]:not([href=#])').click(function() {
+        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+          var $target = $(this.hash);
+          $target = $target.length ? $target : $('[name=' + this.hash.slice(1) +']');
+          if ($target.length) {
+            $('html,body').animate({
+              scrollTop: $target.offset().top
+            }, Math.abs(window.scrollY - $target.offset().top) * 0.75);
+            return false;
+          }
+        }
+      });
+    </script>
   </body>
 </html>
