Tweak landing page

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,7 +4,7 @@
 
     <div id='nav'>
       <a href='/login' id='login'>Login</a>
-      <a href='/register' id='register'>Register</a>
+      <a href='/register' id='register'>Sign up</a>
     </div>
   </div>
 </header>
@@ -19,39 +19,42 @@
         </div>
       </div>
     </div>
-    <a href='#home-about' id='home-more'>More</a>
+    <a href='#home-about-anchor' id='home-more'>More</a>
   </div>
 </section>
 
+<a id='home-about-anchor'></a>
 <section id='home-about'>
   <div class='container'>
     <div class='home-about-card'>
       <img src='../images/binary.png'>
 
-      <h2>Learn</h2>
+      <h3>Count differently</h3>
       <p>Learn how to count in different numerical bases, including binary and hexadecimal.</p>
     </div>
 
     <div class='home-about-card'>
       <img src='../images/bit.png'>
 
-      <h2>Bitwise operations</h2>
+      <h3>Bitwise operations</h3>
       <p>Learn how to manipulate bits.</p>
     </div>
 
     <div class='home-about-card'>
       <img src='../images/convert.png'>
 
-      <h2>Quick conversion</h2>
+      <h3>Quick conversion</h3>
       <p>Learn how to convert between binary, decimal, and hexadecimal with ease.</p>
     </div>
 
     <div class='home-about-card'>
       <img src='../images/cap.png'>
 
-      <h2>Become a master</h2>
+      <h3>Become a master</h3>
       <p>Perform bitwise operations and numerical base conversions like a pro.</p>
     </div>
+
+    <a href='/register' id='register_alt'>Sign up today</a>
   </div>
 </section>
 
