--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -169,6 +169,20 @@ footer {
     }
   }
 
+  #register_alt {
+    border: 1px solid $blue;
+    border-radius: 30px;
+    display: block;
+    margin: 3em auto 0;
+    padding: 1em 2em;
+    width: 15em;
+
+    &:hover {
+      background-color: $blue;
+      color: $white;
+    }
+  }
+
 #home-hero {
   background: url('../images/hero.jpg') fixed no-repeat center center / cover;
   color: $white;
@@ -246,6 +260,11 @@ footer {
     }
   }
 
+#home-about-anchor {
+  position: relative;
+  top: -6em;
+}
+
 #home-about {
   padding: 4em 1em;
   text-align: center;
@@ -259,9 +278,29 @@ footer {
     margin: 1em;
     padding: 1em;
     vertical-align: top;
-    width: 25em;
+    width: 20%;
+
+    @include breakpoint(large) {
+      width: 40%;
+    }
+
+    @include breakpoint(medium) {
+      width: 100%;
+    }
+
+    img {
+      height: 110px;
+      width: 110px;
+    }
+
+    h3 {
+      border-bottom: 1px solid $light-blue;
+      color: $blue;
+      padding-bottom: 0.75em;
+    }
 
     p {
+      font-size: 0.9em;
       text-align: left;
     }
   }
