--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
       <ul id='nav-main'>
         <% if (!loggedIn) { %>
           <li><a href='/login'>Login</a></li>
-          <li><a href='/register'>Register</a></li>
+          <li><a href='/register'>Sign up</a></li>
         <% } else { %>
           <li><a href='#'>Levels</a></li>
           <li><a href='#'>Profile</a></li>
