--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <div class='user-form'>
-  <h1>Register</h1>
+  <h1>Sign up</h1>
 
   <form action='register' method='post'>
     <label>Email:</label>
@@ -11,6 +11,6 @@
     <label>Confirm password:</label>
     <input type="password" name="password2" required>
 
-    <input type="submit" value="Register">
+    <input type="submit" value="Sign up">
   </form>
 </div>
