--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,11 +6,9 @@
       <ul id='nav-main'>
         <% if (!loggedIn) { %>
           <li><a href='/login'>Login</a></li>
-          <li><a href='/register'>Sign up</a></li>
-        <% } else { %>
-          <li><a href='#'>Levels</a></li>
-          <li><a href='#'>Profile</a></li>
+          <li><a href='/register' id='register'>Sign up</a></li>
         <% } %>
+        <li><a href='/tutorials'>Tutorials</a></li>
       </ul>
     </nav>
   </div>
