--- a/views/homelayout.ejs
+++ b/views/homelayout.ejs
@@ -11,13 +11,26 @@
     <script src="/js/jquery-2.1.1.min.js"></script>
   </head>
 
-  <body>
+  <body id='home'>
+    <%- partial ('partials/header.ejs') %>
+
     <%- body %>
 
     <%- partial ('partials/footer.ejs') %>
 
     <script src="/js/dependencies/sails.io.js"></script>
+
     <script>
+      function isScrolledFromTop(offset) {
+        return window.scrollY >= offset;
+      }
+
+      // Toggle header background depending on scroll position
+      window.onscroll = function (event) {
+        document.querySelector('header').className =
+          isScrolledFromTop(window.innerHeight / 4) ? 'home-header-scrolled' : '';
+      }
+
       $('a[href*=#]:not([href=#])').click(function() {
         if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
           var $target = $(this.hash);
