--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
 
     <nav id='nav'>
       <ul id='nav-main'>
-        <% if (!loggedIn) { %>
+        <% if (!req.session.authenticated) { %>
           <li><a href='/login'>Login</a></li>
           <li><a href='/register' id='register'>Sign up</a></li>
         <% } %>
