--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,11 +4,12 @@
 
     <nav id='nav'>
       <ul id='nav-main'>
-        <% if (!req.session.authenticated) { %>
+        <% if (!req.user) { %>
           <li><a href='/login'>Login</a></li>
           <li><a href='/register' id='register'>Sign up</a></li>
+
+          <li><a href='/tutorials'>Tutorials</a></li>
         <% } %>
-        <li><a href='/tutorials'>Tutorials</a></li>
       </ul>
     </nav>
   </div>
