--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -18,10 +18,13 @@
   </form>
 
   <% if (providers) {%>
-    <h4>You can also use one of these...</h4>
+    <div id='login-providers'>
+      <h4>You can also use one of these...</h4>
 
-    <% Object.keys(providers).forEach(function (key) { %>
-      <a href="/auth/<%= providers[key].slug %>" role="button"><%= providers[key].name %></a>
-    <% }) %>
+      <a href="/auth/facebook" role="button">Facebook</a>
+      <a href="/auth/twitter" role="button">Twitter</a>
+      <a href="/auth/google" role="button">Google</a>
+      <a href="/auth/github" role="button">GitHub</a>
+    </div>
   <% } %>
 </div>
