--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -44,5 +44,7 @@
     </div>
 
     <a href='/register' id='register_alt'>Sign up today</a>
+
+    <a href='/login'>Or login with Facebook, Twitter, Google, or GitHub!</a>
   </div>
 </section>
