Remove redundant views, add empty pages to reference sheets

--- a/views/levels.ejs
+++ b/views/levels.ejs
@@ -7,4 +7,4 @@ Type:
 
 <!-- TODO: display table of levels -->
 
-<!-- TODO: link to cheat sheet -->
+<a href="/ref/<%= type %>">Reference sheet</a>
