--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -3,6 +3,12 @@
 	<%= sails.config.myconf.tutorial %>
   </div>
 </br>
+
+Type <%= type %>, level <%= level %>
+
+<!-- TODO: tutorial content with exercise -->
+
+
 <h1>Questions</h1>
   <div class='container'>
 	<%= sails.config.myconf.anyobject.Question %>
