--- a/views/ref_bitwise.ejs
+++ b/views/ref_bitwise.ejs
@@ -155,7 +155,7 @@ ex. 10110010 XOR 00101011 = 10011001</p>
     </tr>
   </table> <br>
 
-ex. 10110010 XOR 00101011 = 11011101</p>
+ex. 10110010 NAND 00101011 = 11011101</p>
 
 <h3>NOR</h3>
 
@@ -189,7 +189,7 @@ ex. 10110010 XOR 00101011 = 11011101</p>
     </tr>
   </table> <br>
 
-ex. 10110010 XOR 00101011 = 01000100</p>
+ex. 10110010 NOR 00101011 = 01000100</p>
 
 <h3>LEFT SHIFT</h3>
 
