added thead and tbody

--- a/views/ref_bitwise.ejs
+++ b/views/ref_bitwise.ejs
@@ -5,31 +5,35 @@
 <p>The AND operator takes two binary numbers of equal length and multiplies them. If both bits in the a position are 1, AND evaluates to 1 at that position. Otherwise, AND evaluates to 0 at that position. <br>
 
   <table border="1">
-    <tr>
-      <td>A</td>
-      <td>B</td> 
-      <td>ANS</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>0</td> 
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>1</td> 
-      <td>0</td>
-  </tr>
-    <tr>
-      <td>1</td>
-      <td>0</td> 
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td> 
-      <td>1</td>
-    </tr>
+    <thead>
+      <tr>
+        <td>A</td>
+        <td>B</td> 
+        <td>ANS</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>0</td>
+        <td>0</td> 
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>0</td>
+        <td>1</td> 
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>0</td> 
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>1</td> 
+        <td>1</td>
+      </tr>
+    </tbody>
   </table> <br>
 
 ex. 10110010 AND 00101011 = 00100010</p>
@@ -39,31 +43,35 @@ ex. 10110010 AND 00101011 = 00100010</p>
 <p>The OR operator takes two binary numbers of equal length. If either bit in a position is 1, OR evaluates to 1 at that position. Otherwise, OR evaluates to 0 at that position. Note that OR is not an "either or" operator: it evaluates to 1 if both bits are 1! <br>
 
   <table border="1">
-    <tr>
-      <td>A</td>
-      <td>B</td> 
-      <td>ANS</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>0</td> 
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>1</td> 
-      <td>1</td>
-  </tr>
-    <tr>
-      <td>1</td>
-      <td>0</td> 
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td> 
-      <td>1</td>
-    </tr>
+    <thead>
+      <tr>
+        <td>A</td>
+        <td>B</td> 
+        <td>ANS</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>0</td>
+        <td>0</td> 
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>0</td>
+        <td>1</td> 
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>0</td> 
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>1</td> 
+        <td>1</td>
+      </tr>
+    </tbody>
   </table> <br>
 
 ex. 10110010 OR 00101011 = 10111011</p>
@@ -73,18 +81,22 @@ ex. 10110010 OR 00101011 = 10111011</p>
 <p>The NOT operator takes a single binary number, and returns the negation of that number: every 0 becomes a 1 and every 1 becomes a 0. <br>
 
   <table border="1">
-    <tr>
-      <td>A</td>
-      <td>ANS</td> 
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>1</td> 
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>0</td> 
-    </tr>
+    <thead>
+      <tr>
+        <td>A</td>
+        <td>ANS</td> 
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>0</td>
+        <td>1</td> 
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>0</td> 
+      </tr>
+    </tbody>
   </table> <br>
 
 ex. ex. NOT 10110010 = 01001101</p>
@@ -94,31 +106,35 @@ ex. ex. NOT 10110010 = 01001101</p>
 <p>The XOR operator, also known as exclusive or, takes two binary numbers of equal length. It is similar to OR in that if one bit at a position is 1, XOR evaluates to 1 at that position. However, unlike OR, XOR evaluates to 0 if both bits at the position are 1! Think of XOR like an "either or" operator. <br>
 
   <table border="1">
-    <tr>
-      <td>A</td>
-      <td>B</td> 
-      <td>ANS</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>0</td> 
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>1</td> 
-      <td>1</td>
-  </tr>
-    <tr>
-      <td>1</td>
-      <td>0</td> 
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td> 
-      <td>0</td>
-    </tr>
+    <thead>
+      <tr>
+        <td>A</td>
+        <td>B</td> 
+        <td>ANS</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>0</td>
+        <td>0</td> 
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>0</td>
+        <td>1</td> 
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>0</td> 
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>1</td> 
+        <td>0</td>
+      </tr>
+    </tbody>
   </table> <br>
 
 ex. 10110010 XOR 00101011 = 10011001</p>
@@ -128,31 +144,35 @@ ex. 10110010 XOR 00101011 = 10011001</p>
 <p>The NAND, or "not and" operator, takes two binary numbers of equal length. It is essentially the opposite of AND: if both bits in the a position are 1, AND evaluates to 0 at that position. Otherwise, AND evaluates to 1 at that position. One can think of NAND as performing AND on the two numbers, then performing NOT on the result. <br>
 
   <table border="1">
-    <tr>
-      <td>A</td>
-      <td>B</td> 
-      <td>ANS</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>0</td> 
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>1</td> 
-      <td>1</td>
-  </tr>
-    <tr>
-      <td>1</td>
-      <td>0</td> 
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td> 
-      <td>0</td>
-    </tr>
+    <thead>
+      <tr>
+        <td>A</td>
+        <td>B</td> 
+        <td>ANS</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>0</td>
+        <td>0</td> 
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>0</td>
+        <td>1</td> 
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>0</td> 
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>1</td> 
+        <td>0</td>
+      </tr>
+    </tbody>
   </table> <br>
 
 ex. 10110010 NAND 00101011 = 11011101</p>
@@ -162,31 +182,35 @@ ex. 10110010 NAND 00101011 = 11011101</p>
 <p>The NOR, or "not or" operator, takes two binary numbers of equal length. It is essentially the opposite of OR: if either bit in a position is 1, OR evaluates to 0 at that position. Otherwise, OR evaluates to 1 at that position. One can think of NOR as performing OR on the two numbers, then performing NOT on the result. <br>
 
   <table border="1">
-    <tr>
-      <td>A</td>
-      <td>B</td> 
-      <td>ANS</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>0</td> 
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>1</td> 
-      <td>0</td>
-  </tr>
-    <tr>
-      <td>1</td>
-      <td>0</td> 
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td> 
-      <td>1</td>
-    </tr>
+    <thead>
+      <tr>
+        <td>A</td>
+        <td>B</td> 
+        <td>ANS</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>0</td>
+        <td>0</td> 
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>0</td>
+        <td>1</td> 
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>0</td> 
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>1</td> 
+        <td>1</td>
+      </tr>
+    </tbody>
   </table> <br>
 
 ex. 10110010 NOR 00101011 = 01000100</p>
