change td of headers to th

--- a/views/ref_bitwise.ejs
+++ b/views/ref_bitwise.ejs
@@ -7,9 +7,9 @@
   <table border="1">
     <thead>
       <tr>
-        <td>A</td>
-        <td>B</td> 
-        <td>ANS</td>
+        <th>A</th>
+        <th>B</th> 
+        <th>ANS</th>
       </tr>
     </thead>
     <tbody>
@@ -45,9 +45,9 @@ ex. 10110010 AND 00101011 = 00100010</p>
   <table border="1">
     <thead>
       <tr>
-        <td>A</td>
-        <td>B</td> 
-        <td>ANS</td>
+        <th>A</th>
+        <th>B</th> 
+        <th>ANS</th>
       </tr>
     </thead>
     <tbody>
@@ -83,8 +83,8 @@ ex. 10110010 OR 00101011 = 10111011</p>
   <table border="1">
     <thead>
       <tr>
-        <td>A</td>
-        <td>ANS</td> 
+        <th>A</th>
+        <th>ANS</th> 
       </tr>
     </thead>
     <tbody>
@@ -108,9 +108,9 @@ ex. ex. NOT 10110010 = 01001101</p>
   <table border="1">
     <thead>
       <tr>
-        <td>A</td>
-        <td>B</td> 
-        <td>ANS</td>
+        <th>A</th>
+        <th>B</th> 
+        <th>ANS</th>
       </tr>
     </thead>
     <tbody>
@@ -146,9 +146,9 @@ ex. 10110010 XOR 00101011 = 10011001</p>
   <table border="1">
     <thead>
       <tr>
-        <td>A</td>
-        <td>B</td> 
-        <td>ANS</td>
+        <th>A</th>
+        <th>B</th> 
+        <th>ANS</th>
       </tr>
     </thead>
     <tbody>
@@ -184,9 +184,9 @@ ex. 10110010 NAND 00101011 = 11011101</p>
   <table border="1">
     <thead>
       <tr>
-        <td>A</td>
-        <td>B</td> 
-        <td>ANS</td>
+        <th>A</th>
+        <th>B</th> 
+        <th>ANS</th>
       </tr>
     </thead>
     <tbody>
